# Linkenite-Hackathon

./: .env.development  .env.example  .env.production  .gitignore  Dockerfile.backend  Makefile  README.md  design.md  dev.bat  dev.sh  docker-compose.prod.yml  docker-compose.yml  hackathaon_task.txt  pyproject.toml  requirements.md  tasks.md  test.db  verify_setup.py
alembic/: env.py
alembic/versions/: a19beb7eb7c5_create_initial_tables.py
backend/: main.py
backend/api/v1/: api.py
backend/api/v1/endpoints/: analytics.py  emails.py  health.py  processing.py  responses.py
backend/core/: config.py  database.py
backend/email_providers/: __init__.py  base.py  config.py  demo.py  factory.py  gmail.py  imap.py  outlook.py  test_provider.py
backend/models/: __init__.py  email.py  knowledge.py  provider.py  response.py
backend/scripts/: __init__.py  init_db.py  manage_db.py  seed_data.py  verify_implementation.py
backend/services/: __init__.py  ai_processing.py  check_ai_results.py  check_responses.py  email_retrieval.py  email_workflow.py  generate_responses.py  knowledge_base.py  process_emails.py  process_emails_ai.py  process_emails_workflow.py  response_generation.py  seed_knowledge_base.py  test_ai_processing.py  test_email_retrieval.py  test_email_workflow.py  test_knowledge_base.py  test_response_generation.py
frontend/dashboard/: Dockerfile.prod  nginx.conf  package-lock.json  package.json
tests/: conftest.py  test_csv_ingestion.py  test_database.py  test_email_provider_integration.py  test_email_providers.py  test_models.py
